<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout 
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/bp_dark_grey"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/bpNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="45dp"
        android:inputType="text"
        android:hint="@string/name_your_boind_point"
        android:textColor="@color/bp_light_grey"
        android:textSize="40sp" />
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp" >

		<EditText
		    android:id="@+id/bpType"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="45dp"
		    android:inputType="text"
		    android:hint="@string/type_of_your_bp"
		    android:textColor="@color/bp_light_grey"
		    android:textSize="20sp" />
      
		<Spinner
		    android:id="@+id/bpTypeSpinner"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignBaseline="@+id/bpType"
		    android:layout_alignParentRight="true" />

    </RelativeLayout>
        
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp" >

        <EditText
            android:id="@+id/bpInitDateTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:inputType="datetime"
            android:hint="@string/initial_date_of_BP"
            android:textColor="@color/bp_light_grey"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bpIniDateTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/bpInitDateTimeText"
            android:layout_alignParentRight="true"
            android:text="@string/initial_date" />

    </RelativeLayout>
        
	<RelativeLayout 
	   android:layout_gravity="left"
	   android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="45dp" >

	    <EditText
	        android:id="@+id/bpEndDateTimeText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:inputType="datetime"
	        android:hint="@string/end_date_of_BP"
	        android:textColor="@color/bp_light_grey"
	        android:textSize="20sp" >
        </EditText>

	    <Button
	        android:id="@+id/bpEndDateTimeButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/bpEndDateTimeText"
	        android:layout_alignParentRight="true"
	        android:text="@string/end_date"
       	/>

	</RelativeLayout>
        

	<EditText
	    android:id="@+id/bpDescriptionText"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="98dp"
	    android:inputType="text"
	    android:singleLine="false"
	    android:hint="@string/DescribeBP"
	    android:textColor="@color/bp_light_grey"
	    android:textSize="20sp" />
	    
    <Button
        android:id="@+id/bpSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:text="@string/save"
        android:textColor="@color/bp_white" />

    <Button
        android:id="@+id/bpCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:text="@string/cancel"
        android:textColor="@color/bp_white" />

    
    <Button
        android:id="@+id/bpInviteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:text="@string/invite_friends"
        android:textColor="@color/bp_white" />
   
</LinearLayout>
</ScrollView>